package edu.kit.scc.dem.tuhl.model.body;

/**
 * The TextCard class represents the model of a TextCard with all its attributes.
 */
public class TextCard extends Body {


  /**
   * Constructor for TextCard, only sets Id.
   *
   * @param id to be set
   */
  public TextCard(String id) {
    super(id);
  }
}