@startuml

  namespace edu.kit.scc.dem.tuhl {
    namespace model {
      class edu.kit.scc.dem.tuhl.model.Annotation {
          - canonical : String
          - created : Date
          - creator : String
          - id : String
          - modified : Date
          - motivation : String
          - pageId : String
          - svgCode : String
          - tags : List<String>
          - textCardIds : List<String>
          - via : String
          + addTag()
          + addTextCardId()
          + getCanonical()
          + getColor()
          + getCreated()
          + getCreator()
          + getId()
          + getModified()
          + getMotivation()
          + getPageId()
          + getSvgCode()
          + getTags()
          + getTextCardIds()
          + getVia()
          + setCanonical()
          + setColor()
          + setCreated()
          + setCreator()
          + setId()
          + setModified()
          + setMotivation()
          + setPageId()
          + setSvgCode()
          + setTags()
          + setTextCardIds()
          + setVia()
      }

      enum Color {
        ADVERT_REGION
        CHART_REGION
        CHEM_REGION
        CUSTOM_REGION
        DEFAULT
        GRAPHIC_REGION
        IMAGE_REGION
        LINE_DRAWING_REGION
        MATHS_REGION
        MUSIC_REGION
        NOISE_REGION
        SEPARATOR_REGION
        TABLE_REGION
        TEXT_REGION
        UNKNOWN_REGION
        color
      }

      class edu.kit.scc.dem.tuhl.model.Manuscript {
          - id : String
          - lastModified : Date
          - pageIds : List<String>
          - publicationYear : int
          - publisher : String
          - title : String
          + getId()
          + getLastModified()
          + getPageIds()
          + getPublicationYear()
          + getPublisher()
          + getTitle()
          + setId()
          + setLastModified()
          + setPageIds()
          + setPublicationYear()
          + setPublisher()
          + setTitle()
      }

      class edu.kit.scc.dem.tuhl.model.body.TextCard {
          - annotationId : String
          - created : String
          - creator : String
          - id : String
          - modified : String
          - purpose : String
          - title : String
          - value : String
          + getAnnotationId()
          + getCreated()
          + getCreator()
          + getId()
          + getModified()
          + getPurpose()
          + getTitle()
          + getValue()
          + setAnnotationId()
          + setCreated()
          + setCreator()
          + setId()
          + setModified()
          + setPurpose()
          + setTitle()
          + setValue()
      }

      namespace filter {
              interface edu.kit.scc.dem.tuhl.model.filter.Filter {
                  {static} + TYPE : FilterType
                  {abstract} + getField()
                  {abstract} + getQuery()
                  {abstract} + getValues()
                  {abstract} + setValue()
              }

              class edu.kit.scc.dem.tuhl.model.filter.FilterSelection {
                  - filters : List<Filter>
                  + getFilters()
              }

              enum FilterType {
                MATCH
                RANGE
                TAG
                UNDEFINED
              }

              class edu.kit.scc.dem.tuhl.model.filter.MatchFilter {
                  {static} + TYPE : FilterType
                  + MatchFilter()
                  + getField()
                  + getQuery()
                  + getValues()
                  + setValue()
              }

              class edu.kit.scc.dem.tuhl.model.filter.RangeFilter {
                  {static} + TYPE : FilterType
                  + RangeFilter()
                  + getField()
                  + getQuery()
                  + getValues()
                  + setValue()
              }

              class edu.kit.scc.dem.tuhl.model.filter.TagFilter {
                  {static} + TYPE : FilterType
                  + TagFilter()
                  + getField()
                  + getQuery()
                  + getValues()
                  + setValue()
              }
            }

            namespace page {
                    class edu.kit.scc.dem.tuhl.model.page.ImagePage {
                        - annotationIds : List<String>
                        - content : Image
                        + addAnnotation()
                        + getAnnotationIds()
                        + getContent()
                        + setAnnotationIds()
                        + setContent()
                    }

                    abstract class edu.kit.scc.dem.tuhl.model.page.Page {
                        - id : String
                        - manuscriptId : String
                        - thumbnail : Image
                        + getId()
                        + getManuscriptId()
                        + getThumbnail()
                        + setId()
                        + setManuscriptId()
                        + setThumbnail()
                    }

                    class edu.kit.scc.dem.tuhl.model.page.TextPage {
                        - content : String
                        + getContent()
                        + setContent()
                    }
                  }
    }
  }
  

  edu.kit.scc.dem.tuhl.model.Annotation o-- edu.kit.scc.dem.tuhl.model.Color : color

  edu.kit.scc.dem.tuhl.model.filter.MatchFilter ..|> edu.kit.scc.dem.tuhl.model.filter.Filter
  edu.kit.scc.dem.tuhl.model.filter.RangeFilter ..|> edu.kit.scc.dem.tuhl.model.filter.Filter
  edu.kit.scc.dem.tuhl.model.filter.TagFilter ..|> edu.kit.scc.dem.tuhl.model.filter.Filter

edu.kit.scc.dem.tuhl.model.page.ImagePage --|> edu.kit.scc.dem.tuhl.model.page.Page
  edu.kit.scc.dem.tuhl.model.page.TextPage --|> edu.kit.scc.dem.tuhl.model.page.Page

@enduml
